samples/_failures_safe/1761092702_5775b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f9a780a.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_0f9a780a.c:157:9: error: expected expression at end of input
  157 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_0f9a780a.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f9a780a.c:157:9: error: expected declaration or statement at end of input
